# theseus

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build-native.sh  build-wasm.sh  build.sh  deploy.sh  dprint.json  harness.js  host.js  index.html  sort-imports.sh  worker.js
.cargo/: config.toml
.zed/: debug.json  settings.json
c/: .gitignore  build.sh  harness.js  host.h  kernel32.c  kernel32.h  wasm.c  wasm.h
doc/: development.md  dos.md
dos/: Cargo.toml
dos/src/: lib.rs  timer.rs  vga.rs
exe/: Cargo.toml  README.md
exe/basicdd/: Cargo.toml  basicdd.js  basicdd_bg.wasm
exe/basicdd/data/: 00406000.raw
exe/basicdd/src/: generated.rs  lib.rs  main.rs
exe/chillin/: Cargo.toml  ghidra.csv
exe/chillin-unpack/: Cargo.toml
exe/chillin-unpack/data/: 004bc000.raw
exe/chillin-unpack/src/: externs.rs  generated.rs  main.rs
exe/chillin/data/: 00400000.raw  00401000.raw  0040b000.raw  0040c000.raw  004bc000.raw  004c9000.raw  004cc000.raw
exe/chillin/src/: externs.rs  generated.rs  main.rs
exe/dos/animate/: Cargo.toml
exe/dos/animate-unpack/: Cargo.toml
exe/dos/animate-unpack-2/: Cargo.toml
exe/dos/animate-unpack-2/data/: 00000100.raw
exe/dos/animate-unpack-2/src/: externs.rs  generated.rs  main.rs
exe/dos/animate-unpack/src/: externs.rs  generated.rs  main.rs
exe/dos/animate/data/: 00000100.raw  00008230.raw
exe/dos/animate/src/: generated.rs  main.rs
exe/dos/magixfly/src/: generated.rs
exe/mine/: Cargo.toml  mine.js  mine_bg.wasm
exe/mine/data/: 01001000.raw  01005000.raw  01006000.raw
exe/mine/src/: generated.rs  lib.rs
exe/mofo/: Cargo.toml
exe/mofo-unpack/data/: 00440000.raw
exe/mofo-unpack/src/: externs.rs  generated.rs  main.rs
exe/mofo/data/: 00400000.raw  00401000.raw  0044e000.raw
exe/mofo/src/: generated.rs
exe/src/: exports.rs  file.rs  imports.rs  iter.rs  lib.rs  parse.rs  relocations.rs  resources.rs
exe/thread/: Cargo.toml
exe/thread/data/: 00400000.raw  00402000.raw  00404000.raw
exe/thread/src/: generated.rs
exe/winapi/: Cargo.toml  winapi.js  winapi_bg.wasm
exe/winapi/data/: 00400000.raw  00401000.raw  00402000.raw  00403000.raw
exe/winapi/src/: generated.rs  lib.rs  main.rs
exe/zig_hello/: Cargo.toml  build.rs
exe/zig_hello/data/: 00400000.raw  00401000.raw  00402000.raw  00404000.raw
exe/zig_hello/src/: generated.rs  lib.rs
exe/zip/: Cargo.toml  build.rs
explore/: Cargo.toml  README.md
explore/src/: ast.rs  inline.rs  main.rs  ssa.rs  union.rs
explore/web/: package-lock.json  package.json  render.html  render.tsx  tsconfig.json
fc/: Cargo.toml
fc/src/: codegen.rs  main.rs  memory.rs
host/: Cargo.toml  README.md
host/src/: lib.rs  sdl.rs  single_thread.rs  wasm.rs
kernel32/: Cargo.toml  build.sh
kernel32/src/: lib.rs
logger/: Cargo.toml  README.md
logger/src/: lib.rs
runtime/: Cargo.toml  README.md
runtime/src/: exe.rs  flags.rs  fpu.rs  host.rs  lib.rs  machine.rs  mapping.rs  memory.rs  mmx.rs  native.rs  ops.rs  registers.rs  wasm.rs
runtime/src/ops/: control_flow.rs  data.rs  flags.rs  fpu.rs  int.rs  math.rs  misc.rs  mmx.rs  mod.rs  mov.rs  shift.rs  string.rs  system.rs
tc/: Cargo.toml  README.md
tc/src/: codegen.rs  com.rs  fpu.rs  gather.rs  lib.rs  load.rs  main.rs  memory.rs  mmx.rs  string.rs  traverse.rs
tc/src/codegen/: control_flow.rs  fpu.rs  math.rs  misc.rs  mmx.rs  mod.rs  string.rs
wasm/: Cargo.toml  README.md  build.rs  build.sh  harness.js
wasm/src/: lib.rs
web/: .gitignore  README.md  host.ts  index.html  static-server.go  tsconfig.json  worker.ts
web/host/: Cargo.toml
web/host/src/: lib.rs
win32/derive/: Cargo.toml  README.md
win32/derive/src/: lib.rs
win32/extract/src/: main.rs
win32/pe/: Cargo.toml
win32/pe/src/: exports.rs  file.rs  lib.rs  parse.rs  resources.rs
win32/winapi/: Cargo.toml  README.md
win32/winapi/src/: advapi32.rs  bitmap.rs  bitmap_format.rs  ddraw.rs  dllexport.rs  dsound.rs  gdi32.rs  handle.rs  heap.rs  host.rs  kernel32.rs  lib.rs  locked_state.rs  msvcrt.rs  point.rs  ptr.rs  rect.rs  sdl.rs  shell32.rs  trace.rs  user32.rs  winmm.rs
win32/winapi/src/ddraw/: ddraw.rs  ddraw1.rs  ddraw7.rs  mod.rs  types.rs
win32/winapi/src/gdi32/: bitmap.rs  dc.rs  misc.rs  mod.rs  object.rs
win32/winapi/src/host/: mod.rs  sdl.rs  wasm.rs
win32/winapi/src/kernel32/: dll.rs  env.rs  event.rs  file.rs  heap.rs  mapping.rs  misc.rs  mod.rs  nls.rs  process.rs  resource.rs  state.rs  thread.rs  time.rs
win32/winapi/src/user32/: dialog.rs  message.rs  misc.rs  mod.rs  rect.rs  resource.rs  window.rs
win32/winapi/src/winmm/: misc.rs  mod.rs  time.rs  wave.rs
