[workspace]
resolver = "2"
members = [
  "basicdd",
  "chillin",
  "thread",
  "winapi",
  "zig_hello",
]

[workspace.dependencies]
runtime = { path = "../runtime" }
winapi = { path = "../win32/winapi" }

[profile.fast]
inherits = "dev"
opt-level = 2
debug-assertions = false
overflow-checks = false
