[package]
name = "explore"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { workspace = true }
iced-x86 = { workspace = true }
log = { workspace = true }
logger = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# ts-rs complains about #[serde(serialize_with = "...")], so disable warnings
ts-rs = { version = "12.0.1", features = ["no-serde-warnings"] }
