[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
log = { workspace = true }
logger = { workspace = true }
num-traits = { version = "0.2.19", default-features = false }
wee_alloc = { version = "0.4.5", optional = true }
zerocopy = { workspace = true }

[features]
wasm = ["dep:wee_alloc"]
