[package]
name = "web-host"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
log = { workspace = true }
logger = { workspace = true }
