[package]
name = "pe"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }

anyhow = "1.0"
bitflags = { workspace = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
widestring = { workspace = true }
zerocopy = { workspace = true }

[features]
serde = ["dep:serde", "bitflags/serde"]
