[package]
name = "winapi"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
bitflags-derive = { workspace = true }
host = { workspace = true }
log = { workspace = true }
pe = { workspace = true }
runtime = { workspace = true }
widestring = { workspace = true }
win32-derive = { path = "../derive" }
zerocopy = { workspace = true }
