[package]
name = "animate-unpack"
version = "0.1.0"
edition = "2024"

#[lib]
#crate-type = ["lib", "cdylib"]

[dependencies]
runtime = { workspace = true }
winapi = { workspace = true }
iced-x86 = { workspace = true, features = ["code_asm"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }
